crates/pixi_build_go/src/snapshots/pixi_build_go__build_script__test__build_script@cmdexe.snap
---
source: crates/pixi_build_go/src/build_script.rs
expression: script
---
cd /d "my-prefix-dir"
SET GOPATH=%SRC_DIR%/gopath
SET GOBIN=%PREFIX%/bin

go install  ./...
if errorlevel 1 exit 1
