crates/pixi_build_go/src/snapshots/pixi_build_go__build_script__test__build_script_with_extra_args@bash.snap
---
source: crates/pixi_build_go/src/build_script.rs
expression: script
---
cd "my-prefix-dir"
export GOPATH=$SRC_DIR/gopath
export GOBIN=$PREFIX/bin

go install -ldflags -s -w ./...
