crates/pixi_build_go/src/snapshots/pixi_build_go__build_script__test__build_script_with_extra_args@cmdexe.snap
---
source: crates/pixi_build_go/src/build_script.rs
expression: script
---
SET GOPATH=%SRC_DIR%/gopath
SET GOBIN=%PREFIX%/bin

go install -ldflags -s -w ./...
if errorlevel 1 exit 1
